# jasmin-object-store-portal

./: .gitignore  README.md  pyproject.toml  requirements.txt
objectstore_interface/: custom_middleware.py  main.py
objectstore_interface/object_store_classes/: base.py  datacore.py  fromjson.py
objectstore_interface/pages/access_key_pages/: bucket.py  create.py  view.py
objectstore_interface/pages/bucket_pages/: create_bucket.py  policies.py
objectstore_interface/pages/login_pages/: login.py
objectstore_interface/pages/object_store_pages/: auth.py  list.py
objectstore_interface/static/css/: main.css
objectstore_interface/templates/: base.html  error.html  index.html  storelist.html  userinfo.html
objectstore_interface/templates/access_key_pages/: buckets.html  keycreate.html  objectbase.html  objectstore.html
objectstore_interface/templates/base_components/: footer.html  navbar.html
objectstore_interface/templates/bucket_pages/: bucketbase.html  bucketform.html  create.html  policies.html  templatepolicies.html
objectstore_interface/templates/login_pages/: login.html
objectstore_interface/templates/object_store_pages/: pass.html  storelist.html
tests/: conftest.py  test.json  test_main_routes.py
